# rwr-mod-installer

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx  constants.ts  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  main.rs  templates.rs
src/components/markdown/: Markdown.less  Markdown.tsx
src/components/messageBar/: MessageBar.tsx  hooks.ts  types.ts
src/contexts/app/: AppContext.tsx  hooks.ts  types.ts
src/entries/about/: About.tsx
src/entries/bundle/: Bundle.less  Bundle.tsx
src/entries/config/: Config.tsx
src/entries/home/: Home.less  Home.tsx
src/entries/install/: Install.tsx  Step1.tsx  Step2.tsx  Step3.less  Step3.tsx  types.ts
src/entries/notFound/: NotFound.tsx
