[package]
name = "rwr-mod-installer"
version = "0.3.0"
description = "A Tauri App"
authors = ["Kreedzt"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard-all", "dialog-all", "fs-all", "path-all", "shell-open"] }
zip = "0.6.3"
anyhow = "1.0.66"
walkdir = "2"
sevenz-rust = "0.5.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
